--- a/src/main/webapp/pages/protocolo/list.xhtml
+++ b/src/main/webapp/pages/protocolo/list.xhtml
@@ -493,8 +493,8 @@
                     <h:outputText value="#{doc.descricao}"/>
                   </p:column>
                   <p:column headerText="Conselho/Prestador" styleClass="left-align ellipsis-text" width="250">
-                    <h:outputText id="prestVis" value="#{doc.prestador}"/>
-                    <vah:toolTip id="prestVisTooltip" for="#{p:component('prestVis')}" value="#{doc.prestador}"
+                    <h:outputText id="prestVis" value="#{doc.consPrestConv}"/>
+                    <vah:toolTip id="prestVisTooltip" for="#{p:component('prestVis')}" value="#{doc.consPrestConv}"
                                  index="#{idx}"/>
                   </p:column>
                   <p:column headerText="Data/Hora Criação" styleClass="left-align" width="135">
